# emotion-sphere

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  Dockerfile  README.md  SFDS_V2_ARCHITECTURE.md  add_zh_labels.py  analyze_emotion_matches.py  batch_search_emotion_exemplars.py  batch_search_emotion_features.py  bible_bilingual_config.json  bible_sphere.db  build_emotion_sphere_layout.py  db_init.sql  dedup_labels.py  dedup_labels2.py  diff.txt  emotion_api_server.py  emotion_exemplar_verse_matches.json  emotion_features_map.json  emotion_query_history.json  emotion_sphere_layout.backup.json  emotion_sphere_layout.json  fix_numbered_labels.py  fix_remaining_numbered.py  index.html  netlify.toml  package-lock.json  package.json  patch_failed_labels.py  pyproject.toml  qdrant_bible_bilingual.py  query_emotion_verses.py  redistribute_sphere.py  render.yaml  requirements.txt  search_bible_bilingual.py  start_backend.sh  (+8 more)
.github/workflows/: deploy-huggingface.yml
.netlify/: netlify.toml  state.json
.netlify/plugins/: package-lock.json
backend/: auth.py  cache.py  db_pool.py  decision_support.py  discernment_engine.py  dss_schema.sql  formation_engine.py  habit_behavior_engine.py  logging_config.py  main.py  persona_tag_engine.py  psychology_engine.py  psychology_schema.sql  security.py  seed_all.sql  shop.py  shop_schema.sql  wxpay.py
docs/architecture/: SFDS_MVP_README.md
docs/development/: AUTH_FEATURES.md
miniprogram/wechat/: app.js  app.json  app.wxss
miniprogram/wechat/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/wechat/pages/login/: login.js  login.wxml  login.wxss
miniprogram/wechat/pages/profile/: profile.js  profile.wxml  profile.wxss
miniprogram/wechat/pages/shop/: shop.js  shop.wxml  shop.wxss
miniprogram/wechat/utils/: api.js
miniprogram/xiaohongshu/: app.js  app.json
miniprogram/xiaohongshu/pages/index/: index.acss  index.axml  index.js  index.json
miniprogram/xiaohongshu/pages/login/: login.acss  login.axml  login.js  login.json
miniprogram/xiaohongshu/pages/profile/: profile.acss  profile.axml  profile.js  profile.json
miniprogram/xiaohongshu/pages/shop/: shop.acss  shop.axml  shop.js  shop.json
miniprogram/xiaohongshu/utils/: api.js
scripts/: add_on_conflict.py  check_seed.py  generate_seed.py  patch_emotion_logs.py  patch_psychology.py  restructure_final.py  validate_and_restructure_sql.py  validate_sql.py
scripts/data-migration/: __init__.py  add_short_en.py  apply_emotions_171_final.py  dedup_zh_labels.py  extract_emotions.py  fetch_neuronpedia_emotion_features.py  fix_bad_labels.py  fix_emotions.py  fix_mistranslations.py  fix_short_en.py  fix_short_en_labels.py  fix_zh_by_en.py  relabel_emotion_nodes.py  update_emotions_final.py  vectorize_bible_bilingual.py  vectorize_bible_siliconflow.py
scripts/utils/: __init__.py  bible_book_mappings.py  qdrant_bible_index.py  search_bible_index.py
src/: App.jsx  CrashDetectionPanel.jsx  DecisionSupportPage.jsx  EmojiPicker.jsx  EmotionSphereScene.jsx  EmotionSphereTab.jsx  ExecutionPanel.css  ExecutionPanel.jsx  HabitsPage.jsx  IgnitionPanel.jsx  LoginScreen.jsx  MicroMomentumPanel.jsx  OnboardingPage.jsx  PersonaProfilePage.jsx  PsychologyPanel.css  PsychologyPanel.jsx  SettingsPage.jsx  StoryCard.jsx  UserProfilePage.jsx  api.js  auth.js  main.jsx  pwa.js  router.jsx  store.js  styles.css
src/components/: ErrorBoundary.jsx
src/hooks/: usePsychology.js
src/providers/: QueryProvider.jsx
tests/: __init__.py  conftest.py  test_api.py  test_persona_identity_execution.py  test_psychology_engine.py  test_shop.py  test_wxpay.py
