[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-sphere"
version = "1.0.0"
description = "情感星球 - 心理学引擎与成长系统"
authors = [{name = "Emotion Sphere Team"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "bleach>=6.1.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
test = [
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
]

[project.urls]
Homepage = "https://emotion-sphere.example.com"
Repository = "https://github.com/emotion-sphere/emotion-sphere"

# ── 代码质量工具配置 ───────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["node_modules", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = [
    "node_modules",
    ".venv",
    "build",
    "dist",
    "tests",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "node_modules",
    "build",
    "dist",
]

# ── 测试配置 ───────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (requires database)",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/node_modules/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ── 预提交钩子 ─────────────────────────────────────────────

[tool.pre-commit.hooks]
black = { id = "black", name = "Black", entry = "black", language = "system", types = ["python"] }
isort = { id = "isort", name = "isort", entry = "isort", language = "system", types = ["python"] }
flake8 = { id = "flake8", name = "Flake8", entry = "flake8", language = "system", types = ["python"] }
mypy = { id = "mypy", name = "MyPy", entry = "mypy", language = "system", types = ["python"] }

# ── 打包配置 ───────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "node_modules*", "dist*", "build*"]

[tool.setuptools.package-data]
backend = ["*.sql", "*.json"]
